2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* font/font.c (grub_font_get_glyph_with_fallback): Avoid dereferencing
	NULL font.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* util/deviceiter.c (grub_util_iterate_devices): Skip device-mapper
	devices when iterating over /dev/disk/by-id; they will be handled
	later if appropriate, which they aren't always (e.g. LVM).

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/misc.h (grub_reboot): Declare as noreturn.
	* kern/efi/efi.c (grub_reboot): Don't return, even if reset_system
	fails.
	(grub_halt): Likewise.
	* kern/ieee1275/openfw.c (grub_reboot): Don't return, even if
	reset-all fails.
	(grub_halt): Don't return, even if all of shut-down, power-off, and
	poweroff fail.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* kern/efi/init.c (grub_efi_init): set_watchdog_timer takes four
	arguments, not three.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (uses_abstraction): New function.
	* util/grub.d/10_linux.in: Use it to check for LVM, so that
	LVM-on-RAID is handled correctly.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Changes from GRUB Legacy): New section.
	(Future): Fix typo.

2010-07-02  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (grub_file_is_not_garbage): Sometimes
	grub.d/README accidentally ends up executable for one reason or
	another.  Ignore it.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* partmap/gpt.c (MAX_SECTOR_LOG): New definition.
	(gpt_partition_map_iterate): Support non-512B sectors.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/efi/init.c (grub_efi_init): Disable watchdog.
	Tested by: Seth Goldberg.

2010-07-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/multiboot.c (grub_multiboot_boot) [GRUB_USE_MULTIBOOT2]:
	Properly align mbi.
	Reported by: Seth Goldberg.

2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>
